--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,81 @@
-mkdir -p .github/workflows
-# Додайте файл ci.yml в цю папку
-git add .github/
-git commit -m "Add CI/CD pipeline"
-git push
+
+name: CI/CD Pipeline
+
+on:
+  push:
+    branches: [ main, master, develop ]
+  pull_request:
+    branches: [ main, master, develop ]
+
+jobs:
+  test:
+    name: 🧪 Тести
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: 📥 Checkout код
+      uses: actions/checkout@v4
+
+    - name: 🐍 Налаштування Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: 📦 Встановлення залежностей
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: 🧪 Запуск тестів
+      run: |
+        pytest test/test_app.py -v --cov=app --cov-report=xml --cov-report=term
+
+    - name: 📊 Звіт покриття
+      uses: codecov/codecov-action@v3
+      if: always()
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: false
+
+  lint:
+    name: 🔍 Перевірка коду
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: 📥 Checkout код
+      uses: actions/checkout@v4
+
+    - name: 🐍 Налаштування Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: 📦 Встановлення flake8
+      run: pip install flake8
+
+    - name: 🔍 Запуск flake8
+      run: flake8 app.py --max-line-length=120 --extend-ignore=E501,W503
+      continue-on-error: true
+
+  docker:
+    name: 🐳 Docker білд
+    runs-on: ubuntu-latest
+    needs: test
+    
+    steps:
+    - name: 📥 Checkout код
+      uses: actions/checkout@v4
+
+    - name: 🐳 Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: 🏗️ Білд Docker образу
+      run: docker build -t warehouse-app:latest .
+
+    - name: 🧪 Тест контейнера
+      run: |
+        docker run -d -p 5000:5000 --name test-container warehouse-app:latest
+        sleep 15
+        docker ps | grep test-container
+        docker stop test-container
+        docker rm test-container
